# projudi-2

./: .gitignore  CLAUDE.md  juizo-conceito-v2.html
.claude/: launch.json
cejusc-pre/: .dockerignore  Dockerfile  README.md  conftest.py  requirements.txt
cejusc-pre/agente/: __main__.py  analyzer.py  client.py  config.py  pdf.py  rag.py  ui.py
cejusc-pre/api/: auth.py  deps.py  main.py  main_minimal.py  schemas.py  store.py
cejusc-pre/db/: database.py  models.py  store_sql.py
cejusc-pre/fsm/: engine.py  estados.py
cejusc-pre/models/: acordo.py  partes.py  reclamacao.py  sessao.py
cejusc-pre/scripts/: sync_vault_bundle.sh
cejusc-pre/servicos/: __init__.py  automacoes.py
cejusc-pre/tests/: test_api.py  test_auth.py  test_db.py  test_fsm.py  test_models.py
cejusc-pre/vault_bundle/: ALVARÁ JUDICIAL.md  CERTIDÃO DE BENS.md  DECISÃO - CEJUSC - ARQUIVAMENTO.md  DECISÃO - CEJUSC - DESARQUIVAMENTO E NOVA AUDIÊNCIA.md  DECLARAÇÃO DE AUTONOMO.md  DECLARAÇÃO DE RESIDÊNCIA.md  DECLARAÇÃO DO LAR.md  FORMULÁRIO RECLAMAÇÃO.md  (+17 more)
frontend/: index.html  package-lock.json
juizo-core/: README.md  pyproject.toml
juizo-core/juizo/: __init__.py  exceptions.py
juizo-core/juizo/audit/: __init__.py  log.py  retention.py
juizo-core/juizo/fsm/: __init__.py  base.py  engine.py  signed_engine.py
juizo-core/juizo/models/: __init__.py  base.py  partes.py  pedidos.py  processo.py
juizo-core/juizo/signing/: __init__.py  convergence.py  gateway.py  signals.py  verifier.py
juizo-core/tests/: test_core.py  test_signed_fsm.py  test_signing.py
rito-sumarissimo/: conftest.py
(+38 files in other folders)
