[project]
name = "juizo-core"
version = "0.1.0"
description = "DSL processual para o Sistema de Informação Jurisdicional Juízo"
authors = [{ name = "Juízo" }]
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }

dependencies = [
    "pydantic>=2.0",
    "python-dateutil>=2.9",
]

[project.optional-dependencies]
migration = [
    "pytesseract>=0.3",      # OCR
    "Pillow>=10.0",          # processamento de imagem
    "openai-whisper>=20231117",  # transcrição de vídeo/áudio
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["juizo"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
